--- a/Index.html
+++ b/Index.html
@@ -14,5 +14,6 @@
         <li>STUDIA INFORMATICA</li>
         <li>STUDIA INFORMATICA</li>
     </ol>
+    <img src="andreella.jfif" alt="studia">
 </body>
 </html>
