--- a/Index.html
+++ b/Index.html
@@ -15,5 +15,6 @@
         <li>STUDIA INFORMATICA</li>
     </ol>
     <img src="andreella.jfif" alt="studia">
+    <p>scusa per la pressione ma domani hai verifica</p>
 </body>
 </html>
