--- a/Index.html
+++ b/Index.html
@@ -16,5 +16,6 @@
     </ol>
     <img src="andreella.jfif" alt="studia">
     <p>scusa per la pressione ma domani hai verifica</p>
+    <p>Vuoi chiedere di spostare la verifica?</p>
 </body>
 </html>
